--- a/code/parsing-engine/build.gradle
+++ b/code/parsing-engine/build.gradle
@@ -17,6 +17,11 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '4.7.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '4.7.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '4.7.2'
+
+
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 
