--- a/code/parsing-engine/build.gradle
+++ b/code/parsing-engine/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '4.7.2'
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '4.7.2'
     implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '4.7.2'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+
 
 
     // Use JUnit Jupiter API for testing.
