--- a/code/parsing-engine/build.gradle
+++ b/code/parsing-engine/build.gradle
@@ -14,12 +14,13 @@ plugins {
 repositories {
     // Use JCenter for resolving dependencies.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '4.7.2'
-    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '4.7.2'
-    implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '4.7.2'
+    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.1.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
 
